--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "brianium/paratest": "^7.4",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^2.0",
